spark/kubernetes/spark-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spark-master
spec:
  replicas: 1
  selector:
    matchLabels:
      component: spark-master
  template:
    metadata:
      labels:
        component: spark-master
    spec:
      containers:
        - name: spark-master
          image: egr_spark:1.0
          command: [ "/spark-master" ]
          resources:
            requests:
              cpu: 100m
          ports:
            - containerPort: 7077
            - containerPort: 8080

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: spark-worker
spec:
  replicas: 3
  selector:
    matchLabels:
      component: spark-worker
  template:
    metadata:
      labels:
        component: spark-worker
    spec:
      containers:
        - name: spark-worker
          image: k3d-rudshtein.local:6400/spark:1.0
          #          image: spark-hadoop:3.2.0
          command: [ "/spark-worker" ]
          resources:
            requests:
              cpu: 100m
          ports:
            - containerPort: 8081
