spark/kubernetes/spark-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: spark
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: rudshtein.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark-master
                port:
                  number: 8080
